tests/paczka1/fuzzy1/88937152.err
Error in line 26: 5WNM A532 88,8
Error in line 29: CnfZOE2WoJV A532 22,6
Error in line 25: zBKoZoTde S499 85,7
Error in line 39: n8ItKsO0B S499 61,2
